    automatically set datacenter to the right value, rather than needing it
    to be explicitly set.
  * info: Added --show option to pick which parts of the info to calculate
    and display.
  * Improve behavior when there are special remotes configured with
    autoenable=yes with names that conflict with other remotes.
  * Bump aws build dependency to 0.24.1.
  * stack.yaml: Update to lts-24.2.

 -- Joey Hess <id@joeyh.name>  Wed, 30 Jul 2025 13:45:42 -0400

git-annex (10.20250721) upstream; urgency=medium

  * Improved workaround for git 2.50 bug, avoding an occasional test suite
    failure, as well as some situations where an unlocked file did not get
    populated when adding another file to the repository with the same
    content.
  * Add --url option and url= preferred content expression, to match
    content that is recorded as present in an url.   
  * p2phttp: Scan multilevel directories with --directory.
  * p2phttp: Added --socket option.
  * Fix bug in handling of linked worktrees on filesystems not supporting
    symlinks, that caused annexed file content to be stored in the wrong
    location inside the git directory, and also caused pointer files to not
    get populated.
  * fsck: Fix location of annexed files when run in linked worktrees
    that have experienced the above bug.
  * Fix symlinks generated to annexed content when in adjusted unlocked
    branch in a linked worktree on a filesystem not supporting symlinks.

 -- Joey Hess <id@joeyh.name>  Tue, 22 Jul 2025 14:11:26 -0400

git-annex (10.20250630) upstream; urgency=medium

  * Work around git 2.50 bug that caused it to crash when there is a merge
    conflict with an unlocked annexed file.
  * Skip and warn when a tree import includes empty filenames,
    which can happen with eg a S3 bucket.
  * Avoid a problem with temp file names ending in whitespace on
    filesystems like VFAT that don't support such filenames.
  * webapp: Rename "Upgrade Repository" to "Convert Repository"